--- a/pom.xml
+++ b/pom.xml
@@ -179,7 +179,7 @@
 						<version>2.1.1</version>
 						<configuration>
 							<outputDirectory>deployments</outputDirectory>
-							<warName>ROOT</warName>
+							<warName>bareeq</warName>
 						</configuration>
 					</plugin>
 				</plugins>
