--- a/pom.xml
+++ b/pom.xml
@@ -54,8 +54,13 @@
 			<version>3.0.9.Final</version>
 			<scope>compile</scope>
 		</dependency>
-		<!-- <dependency> <groupId>org.jboss.resteasy</groupId> <artifactId>resteasy-jackson2-provider</artifactId> 
-			<version>3.0.9.Final</version> <scope>compile</scope> </dependency> -->
+		
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jackson2-provider</artifactId>
+			<version>3.0.9.Final</version>
+			<scope>compile</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
